--- a/recipes.html
+++ b/recipes.html
@@ -1,52 +1,200 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
-<html lang="en"> 
-    <head class="head">
-        <!--META-->
-            <meta charset="uft-8">
-            <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
-            <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
-        <!--NAV-->
-        <nav>
-            <style>
-                body, html {
-                    height: 100%;
-                    margin: 0%;
-                }
-                body {
-                    display: grid;
-                    min-height: 100vh;
-                    place-items: center;
-                    line-height: 1.6;
-                    background-image: url(media/chef.jpg);
-                    background-size: cover;
-                    background-position: bottom;
-                    background-repeat:no-repeat;
-                    padding-bottom: 100%;
-                }
-            </style>
-            <title id="tile">DECAPOD</title>
-            <a href="index.html" id="decapod">DECAPOD</a>
-            <p id="slogan" href="#index">Feeding the World Sustainably</p>
-            <a href="index.html">HOME</a>
-            <a href="products.html">PRODUCTS</a>
-            <a href="team.html">OUR TEAM</a>
-            <a href="recipes.html">RECIPES</a>
-            <a href="partners.html">PARTNERS</a>
-            <a href="sustainability.html">SUSTAINABILITY</a>
-        </nav>
-    </head>
+<!-- DOCUMENT FORMATTING-->
+<html lang="en">
+    <!--META-->
+    <meta charset="uft-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
+    <link rel="icon" type="img/png" href="media/Logo.png">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
+    <body>
+        <!--HEAD-->
+        <head class="head">
+            <section class="background-recipes">
+                <!--NAV-->
+                <nav>
+                    <title>DECAPOD</title>
+                    <img id="logo" src="media/Logo.png">
+                    <p id="decapod">DECAPOD</p>
+                    <p id="slogan" href="#index">Feeding the World Sustainably</p>
+                    <a href="index.html">HOME</a>
+                    <a href="products.html">PRODUCTS</a>
+                    <a href="team.html">OUR TEAM</a>
+                    <a href="recipes.html">RECIPES</a>
+                    <a href="partners.html">PARTNERS</a>
+                    <a href="sustainability.html">SUSTAINABILITY</a>
+                </nav>
+                <section class="title">
+                    <h1 class="title-title">Recipes</h1>
+                    <h1 class="title-supportingtext">Created in collaboration with our partnering resturants</h1>
+                </section>
+            </section> 
+        </head>
+        <section class="card">
+            <section class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
+                <section class="card-recipe">
+                    <p style="text-align: center;">Do This</p>
+                    <p style="text-align: center;">Ingredients</p>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
+                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul>
+                        <li>2 whole cooked Decapod Crabs</li>
+                        <li>2 tbsp flavourless oil</li>
+                        <li>3 Garlic cloves, very finely chopped</li>
+                        <li>Thumb sized piece of giner, finely chopped</li>
+                        <li>3 red chillies</li>
+                        <li>4 tbsp tomato ketchup</li>
+                        <li>2 tbsp soy sauce</li>
+                        <li>Handfull coriander leaves, roughly chopped</li>
+                        <li>2 spring onions</li>
+                        <li>Rice or steamed bad buns to serve</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+        <section class="card">
+            <section class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
+                <section class="card-recipe">
+                    <p style="text-align: center;">Do This</p>
+                    <p style="text-align: center;">Ingredients</p>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
+                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul>
+                        <li>2 whole cooked Decapod Crabs</li>
+                        <li>2 tbsp flavourless oil</li>
+                        <li>3 Garlic cloves, very finely chopped</li>
+                        <li>Thumb sized piece of giner, finely chopped</li>
+                        <li>3 red chillies</li>
+                        <li>4 tbsp tomato ketchup</li>
+                        <li>2 tbsp soy sauce</li>
+                        <li>Handfull coriander leaves, roughly chopped</li>
+                        <li>2 spring onions</li>
+                        <li>Rice or steamed bad buns to serve</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+        <section class="card">
+            <section class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
+                <section class="card-recipe">
+                    <p style="text-align: center;">Do This</p>
+                    <p style="text-align: center;">Ingredients</p>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
+                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul>
+                        <li>2 whole cooked Decapod Crabs</li>
+                        <li>2 tbsp flavourless oil</li>
+                        <li>3 Garlic cloves, very finely chopped</li>
+                        <li>Thumb sized piece of giner, finely chopped</li>
+                        <li>3 red chillies</li>
+                        <li>4 tbsp tomato ketchup</li>
+                        <li>2 tbsp soy sauce</li>
+                        <li>Handfull coriander leaves, roughly chopped</li>
+                        <li>2 spring onions</li>
+                        <li>Rice or steamed bad buns to serve</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+        <section class="card">
+            <section class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
+                <section class="card-recipe">
+                    <p style="text-align: center;">Do This</p>
+                    <p style="text-align: center;">Ingredients</p>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
+                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul>
+                        <li>2 whole cooked Decapod Crabs</li>
+                        <li>2 tbsp flavourless oil</li>
+                        <li>3 Garlic cloves, very finely chopped</li>
+                        <li>Thumb sized piece of giner, finely chopped</li>
+                        <li>3 red chillies</li>
+                        <li>4 tbsp tomato ketchup</li>
+                        <li>2 tbsp soy sauce</li>
+                        <li>Handfull coriander leaves, roughly chopped</li>
+                        <li>2 spring onions</li>
+                        <li>Rice or steamed bad buns to serve</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+        <section class="card">
+            <section class="card-content">
+                <h2 class="card-title">Singapore Crab</h2>
+                <p class="card-body" style="width: 80%; font-weight: bold;">Deliciously Spicy Singapore Style Crab Enhanced With Decapod Crab</p>
+                <section class="card-recipe">
+                    <p style="text-align: center;">Do This</p>
+                    <p style="text-align: center;">Ingredients</p>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0;";> 
+                        <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                        <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                        <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul>
+                        <li>2 whole cooked Decapod Crabs</li>
+                        <li>2 tbsp flavourless oil</li>
+                        <li>3 Garlic cloves, very finely chopped</li>
+                        <li>Thumb sized piece of giner, finely chopped</li>
+                        <li>3 red chillies</li>
+                        <li>4 tbsp tomato ketchup</li>
+                        <li>2 tbsp soy sauce</li>
+                        <li>Handfull coriander leaves, roughly chopped</li>
+                        <li>2 spring onions</li>
+                        <li>Rice or steamed bad buns to serve</li>
+                    </ul>
+                </section>
+            </section>
+        </section>
+         <!--FOOTER-->
+         <section class="footer" style="background: linear-gradient(#f9f9f9, #63616b);transform: translateY(260rem);">
+            <section class="footer-container">
+                <section class="footer-container-text" >
+                    <div style="display:flex; align-items: center; justify-content: center;">
+                        <div>
+                            <img src="media/Logo.png" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
+                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
+                        <div>
+                            <p style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
+                        <div>
+                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </section>
+    </body>
+</html>
 
     <body>
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title">Singapore Crab</h2>
-                <p class="card-body">Deliciously spicy singapore style crab enhanced with Decapod crab</p>
-                <a href="#" class="button">Make Me</a>
-            </div>
-        </div>
+        
     </body>
 </html>
 
