--- a/sustainability.html
+++ b/sustainability.html
@@ -1,39 +1,74 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
-<html lang="en"> 
-    <head class="head">
-        <!--META-->
-            <meta charset="uft-8">
-            <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
-            <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
-        <!--NAV-->
-        <nav>
-            <style>
-                body, html {
-                    height: 100%;
-                    margin: 0%;
-                }
-                body {
-                    background-image: url(media/Sustainability.png);
-                    background-size: cover;
-                    background-position: top;
-                    background-repeat:no-repeat;
-                    padding-bottom: 100%;
-                }
-            </style>
-            <title id="tile">DECAPOD</title>
-            <p id="decapod">DECAPOD</p>
-            <p id="slogan" href="#index">Feeding the World Sustainably</p>
-            <a href="index.html">HOME</a>
-            <a href="products.html">PRODUCTS</a>
-            <a href="team.html">OUR TEAM</a>
-            <a href="recipes.html">RECIPES</a>
-            <a href="partners.html">PARTNERS</a>
-            <a href="sustainability.html">SUSTAINABILITY</a>
-        </nav>
-    </head>
+<!-- DOCUMENT FORMATTING-->
+<html lang="en">
+    <!--META-->
+    <meta charset="uft-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
+    <link rel="icon" type="img/png" href="media/Logo.png">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
+    <body>
+        <!--HEAD-->
+        <head>
+            <section class="background-sustainability">
+                <!--NAV-->
+                <nav>
+                    <title>DECAPOD</title>
+                    <img id="logo" src="media/Logo.png">
+                    <p id="decapod">DECAPOD</p>
+                    <p id="slogan" href="#index">Feeding the World Sustainably</p>
+                    <a href="index.html">HOME</a>
+                    <a href="products.html">PRODUCTS</a>
+                    <a href="team.html">OUR TEAM</a>
+                    <a href="recipes.html">RECIPES</a>
+                    <a href="partners.html">PARTNERS</a>
+                    <a href="sustainability.html">SUSTAINABILITY</a>
+                </nav>
+            </section> 
+        </head>
+        <img class="starfish" src="media/Starfish.png">
+        <section class="section">
+            <section class="section1">
+                <h1 style="color:#104364; font-size: 5rem;">Our Obligation to Nature</p>
+                <h3 style="color:white; font-size: 2rem;">We reduce the resource burden to our planet and foster a sustainable future with record low Co2e emissions and efficient feeding, while maintaining the highest standard for animal well being</h3>
+            </section>
+            <section class="section2">
+                <h3 style="padding-top: 2.5rem; padding-bottom: 1rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >CO2e</h3>
+                <img src="media/sustainability-graph.png" style="width: 100%;">
+            </section>
+            <section class=section3>
+                <h3 style="padding-top: 3rem; padding-bottom: 2.5rem; color:white; font-size: 5rem; z-index: 2; background-image: url(media/Brushstroke-red.png); background-repeat: no-repeat; background-position: center; background-size: cover;" >Feed Conversion Ratio</h3>
+            </section>
+            <section class="section4">
+
+            </section>
+        </section>
+        <!--FOOTER-->
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #68a3c2);transform: translateY(300rem);">
+            <section class="footer-container">
+                <section class="footer-container-text" >
+                    <div style="display:flex; align-items: center; justify-content: center;">
+                        <div>
+                            <img src="media/Logo.png" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
+                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(2.1rem);">
+                        <div>
+                            <p style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center; transform: translateY(3.2rem);">
+                        <div>
+                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </section>
+    </body>
 </html>
 
 <style>
