--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
             <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+            <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
         <!--NAV-->
         <nav>
             <style>
@@ -44,10 +44,41 @@
             <p style="font-weight: bold;">jan.storesund@decapod.no</p>
         </div>
         <!--TEAM-->
-        <div style="display: flex; justify-content: space-evenly; transform:translateY(360%)">
-            <img class="portrait" src="media/Kjell.png">
-            <img class="portrait" src="media/egil.png">
-            <img class="portrait" src="media/folke.png">
-        </div>
+        <section class="team" style="transform:translateY(110%)">
+            <div style="display: flex; justify-content: space-evenly;">
+                <img class="portrait" src="media/Kjell.png">
+                <img class="portrait" src="media/egil.png">
+                <img class="portrait" src="media/folke.png">
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: justify; font-size: 1.5rem;">
+                <p>Kjell is educated as a state authorized accountant with a degree from the Norwegian School of Economics. He has over 30 years' experience in corporate finance as a business risk manager, consultant, M&A manager, and has notably spent 10 years as partner at EY. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos quam magni adipisci tenetur laudantium facilis excepturi laboriosam quo sit modi.</p>
+                <p>Egil has a M.Sc in international business and over 30 years of experience in managerial roles. This includes having been a supply chain accountant, sales manager at Hydro Aluminium, CEO at Norsk Privatøkonomi, CFO at Bauer hydrolics, supply chain manager at Imenco group, and holding numerous board positions. After seeing the potential in the crab autofeed technology Jan Roar had invented, the two of them founded Decapod in 2018 with Egil taking charge of administrative and managerial responisbilities allowing Jan Roar to focus on further developing our technologies.</p>
+                <p>Folke is the newest and youngest memer of Decapods' team. Folke has had a lifelong love for the sea and crab fishing. This, along with his ambition and broad skillset has made him a good match for Decapod at this stage of our growth. Folke was taking a bachelor's in business at NHH before joining Decapod. He also has experience as a financial controller, board member in a capital asset management firm, & and as CEO of his own investment vehicle, Currently, Folke is primarily responsible for web design, development, and media production but also takes on offhand tasks.</p>
+            </div>
+        </section>
+        <!--FOOTER-->
+        <section class="footer" style="background: linear-gradient(#f9f9f9, #ffca81); transform:translateY(100rem);">
+            <section class="footer-container">
+                <section class="footer-container-text" >
+                    <div style="display:flex; align-items: center; justify-content: center;">
+                        <div>
+                            <img src="media/Logo.png" style="position:relative; left: -4.5rem; top:4.3rem;width:4rem;height:4rem;">
+                            <p style="font-size: 34px; margin:0; font-weight: bold;" >DECAPOD</p>
+                            <p style="margin:0; font-weight: bold;">Feeding the World Sustainably</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center;">
+                        <div>
+                            <p style="font-weight: bold;">Staumøyvegen 28B, 5544 Vålevåg <br> Phone: (+47) 90770976 <br> Email: Inquiries@ms-solutions.no</p>
+                        </div>
+                    </div>
+                    <div style="display:flex; align-items: center; justify-content: center;">
+                        <div>
+                            <p style="font-weight: bold;">© MS Solutions AS</p>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </section>
     </body>
 </html>
