--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
             <link rel="icon" type="img/png" href="media/Logo.png">
-            <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+            <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
         <!--NAV-->
         <nav>
             <style>
