--- a/sustainability.html
+++ b/sustainability.html
@@ -25,6 +25,9 @@
                     <a href="partners.html">PARTNERS</a>
                     <a href="sustainability.html">SUSTAINABILITY</a>
                 </nav>
+                <section class="header-sustainability-container">
+                    <img class="header-sustainability" src="media/Sustainability-heading.png">
+                </section>
             </section> 
         </head>
         <img class="starfish" src="media/Starfish.png">
